# Client side: - Implemented delete functionality to change photo component - Refactored logged-user service - Removed shadow from auth header - fixed header z-index in global styles

--- a/client/src/app/components/authorized/profile/change-photo/change-photo.component.css
+++ b/client/src/app/components/authorized/profile/change-photo/change-photo.component.css
@@ -43,6 +43,7 @@
   box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2),
   0 2px 2px 0 rgba(0, 0, 0, 0.14),
   0 3px 4px 0 rgba(0, 0, 0, 0.13);
+  pointer-events: none;
 }
 
 .delete {
@@ -53,6 +54,11 @@
   padding: 7px;
   font-size: 1.7rem;
   cursor: pointer;
+  pointer-events: auto;
+}
+
+.delete-container:hover {
+  opacity: 0.8;
 }
 
 button {
