--- a/client/src/app/components/non-authorized/non-auth-header/non-auth-header.component.css
+++ b/client/src/app/components/non-authorized/non-auth-header/non-auth-header.component.css
@@ -1,5 +1,6 @@
 header {
   background: radial-gradient(circle, rgb(27, 0, 44) 0%, rgba(0, 0, 0, 1) 100%);
+  box-shadow: 0 0 5em black;
 }
 
 .avatar-container,
